[package]
name = "inetstack"
version = "1.0.5"
authors = [ "Microsoft Corporation" ]
description = "Demikernel's TCP/UDP Stack"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/inetstack"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2018"

[dependencies]
arrayvec = "0.7.2"
async-trait = "0.1.53"
byteorder = "1.4.3"
crc = "3.0.0"
crossbeam-channel = "0.5.4"
float_duration = "0.3.3"
futures = "0.3.21"
libc = "0.2.126"
log = "0.4.17"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = ["small_rng"] }

perftools = { git = "https://github.com/demikernel/perftools", rev = "10740b3c46440f4eef740c401d8fd2385998c16a" }
runtime = { git = "https://github.com/demikernel/runtime", rev = "76692aa98f56b369b4e0783f5d5a4edf94c3ee86" }

[features]
profiler = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false