# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "inetstack"
version = "1.1.1"
authors = [ "Microsoft Corporation" ]
edition = "2021"
description = "Demikernel's TCP/UDP Stack"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/inetstack"
license-file = "LICENSE.txt"

[dependencies]
arrayvec = "0.7.2"
async-trait = "0.1.56"
byteorder = "1.4.3"
crc = "3.0.0"
crossbeam-channel = "0.5.5"
float_duration = "0.3.3"
futures = "0.3.21"
libc = "0.2.126"
log = "0.4.17"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = ["small_rng"] }

runtime = { git = "https://github.com/demikernel/runtime", rev = "6840b8d9472207edc61c01c79f2d33ebfaf5aa8c" }

[features]
profiler = [ "runtime/perftools" ]

# Build profile used for releases.
[profile.release]
opt-level = 3             # Enable all compiler optimizations.
debug = false             # Do not include any debug info in the binary.
debug-assertions = false  # Do not include any debug assertions in the binary.
overflow-checks = false   # Do not check for overflows at runtime.
lto = "fat"               # Perform link time optimizations across all dependencies (overridden).
panic = "abort"           # Terminate the process upon panic (overridden).
incremental = false       # Disable incremental compilation.
codegen-units = 1         # Produce a single code generation unit (overridden).
rpath = false             # Disable runtime search path.

# Build profile used for development and debugging.
[profile.dev]
opt-level = 0             # Disable all compiler optimizations.
debug = true              # Output full debug info in the binary.
debug-assertions = true   # Include debug assertions in the binary.
overflow-checks = true    # Check for overflows at runtime.
lto = "off"               # Disable link time optimization (overridden).
panic = 'unwind'          # Unwind the stack upon panic.
incremental = true        # Incremental build.
codegen-units = 256       # Produce multiple code generation units.
rpath = false             # Disable runtime search path.
